Hama Change Log

Trunk (unreleased changes)

  NEW FEATURES

    HAMA-337: Provide Apache Maven building support (Tommaso Teofili via edwardyoon)
    HAMA-304: Allow BSP peers to get a list of all other peers 
                executing tasks of the same job (Filipe Manana via edwardyoon)
    HAMA-267: Add command-line interface for job management
                (hyunsik via edwardyoon)
    HAMA-279: Add "serialize printing" to examples (edwardyoon)
    HAMA-272: Hama/Zookeeper Integration (edwardyoon)
    HAMA-265: Add example Pi estimatior based on BSP (edwardyoon)
    HAMA-266: Add Ant target to generate the UML class diagrams (edwardyoon)
    HAMA-209: Add example for Cosine Similarity Matrix (edwardyoon)
    HAMA-195: Interface of the bsp (hyunsik via edwardyoon)
    HAMA-185: Finds the eigenvalues and eigenvectors 
              associated with the symmetric matrix A (samuel)
    HAMA-171: Find the maximum absolute row sum using MapReduce (edwardyoon)
    HAMA-174: Compute the transpose of a matrix (edwardyoon)
    HAMA-162: Add Graph using Sparse Matrix (edwardyoon)
    HAMA-151: Add multiplication example of file matrices (edwardyoon)
    HAMA-145: Add privacy policy page (edwardyoon)
    HAMA-83: 2D sqaure blocking for dense matrix multiplication (edwardyoon)
    HAMA-104: Add getNumMap/reduceTasks to HamaConfiguration (edwardyoon)
    HAMA-92: Add subMatrix() to Matrix (edwardyoon)
    HAMA-84: Add a writable comparable for BlockID (edwardyoon) 
    HAMA-81: Add subVector(int i0, int i1) to Vector (edwardyoon)
    Hama-80: Add identity(int m, int n) 
               which returns identity matrix (edwardyoon) 
    HAMA-62: Hama Shell Implementation (samuel via edwardyoon)
    HAMA-61: Load / save matrices from HTable (edwardyoon)
    HAMA-51: Add get/setRowAttribute() method (edwardyoon)
    HAMA-13: Matrix multiplication (edwardyoon)
    HAMA-48: Add getColumn(int column) method 
               which returns column vector (edwardyoon)